Fix chat section on tablet

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,6 @@ text-align: center;
 	height: 40px !important;
 }
 .chat{
-	padding-top: 3em;
 	color: #ffffff;
 	background-color: #101d2c;
 	padding-top: 2em;
@@ -122,7 +121,7 @@ text-align: center;
 
 .chat h1{
 	font-family: "MontserratExtraBold";
-	margin-top: 4em;
+	margin-top: 2em;
 }
 .chat p{
 	font-family: "MontserratLight";
@@ -164,7 +163,7 @@ text-align: center;
 	transition: transform .5s;
 	cursor: pointer;
 }
-.testimonail .buttons{
+.testimonial .buttons{
 	display: flex;
 	align-items: center;
 }
@@ -196,6 +195,13 @@ text-align: center;
 }
 .seamless .row .option{
 	margin-top: 2em;
+}
+
+.chat h1{
+	font-size: 1.6em
+}
+.chat p{
+	font-size: .7em;
 }
 }
 
